crates/libs/frieze-macros/tests/ui/namespace_attr_on_struct.rs
#[frieze::frieze(namespace)]
struct NotAMod;

fn main() {}
